aksworkshop/captureorder-service-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: capture-order
spec:
  selector:
    app: captureorder
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: ClusterIP
